WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127451
AX: Can't always increment web sliders.
https://bugs.webkit.org/show_bug.cgi?id=127451
Summary
AX: Can't always increment web sliders.
Samuel White
Reported
2014-01-22 15:34:48 PST
If a slider has no step size and a very small range, for example: min = 0, max = 10 AXIncrement and AXDecrement fail. This is because we try and increment by a percent in this case, and the percent results in a value of less than 1. Since 1 is the implicit step size in this case we need to adjust.
Attachments
Initial patch for feedback.
(955 bytes, patch)
2014-01-22 15:42 PST
,
Samuel White
no flags
Details
Formatted Diff
Diff
Patch.
(5.40 KB, patch)
2014-01-22 17:55 PST
,
Samuel White
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Samuel White
Comment 1
2014-01-22 15:35:10 PST
<
rdar://problem/15336081
>
Samuel White
Comment 2
2014-01-22 15:42:48 PST
Created
attachment 221917
[details]
Initial patch for feedback. Added some basic logic to make sure we step by at least one. I'm doing this to match the keyboard behavior.
chris fleizach
Comment 3
2014-01-22 15:52:46 PST
Comment on
attachment 221917
[details]
Initial patch for feedback. is this the same thing that happens in the keyboard handler. do you have a layout test ready
Samuel White
Comment 4
2014-01-22 17:55:50 PST
Created
attachment 221929
[details]
Patch. Added layout test and updated logs.
Samuel White
Comment 5
2014-01-22 17:56:36 PST
(In reply to
comment #3
)
> (From update of
attachment 221917
[details]
) > is this the same thing that happens in the keyboard handler. do you have a layout test ready
Keyboard code also clamps to one in this situation. Layout test has been added.
WebKit Commit Bot
Comment 6
2014-01-22 20:08:28 PST
Comment on
attachment 221929
[details]
Patch. Clearing flags on attachment: 221929 Committed
r162587
: <
http://trac.webkit.org/changeset/162587
>
WebKit Commit Bot
Comment 7
2014-01-22 20:08:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug